# hardware_instructions_demo

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  laplace.cpp  laplace_cuda.cu  laplace_openacc.cpp  laplace_opencl.cpp  laplace_opencl_cppbindings.cpp  laplace_slow.cpp  loop1.cpp  loop1_cuda.cu  loop1_mkl.cpp  loop1_mkl2.cpp  loop1_openblas.cpp  loop1_opencl.cpp  loop1_opencl_cppbindings.cpp  loop1_opencl_cstyle.cpp  loop2.cpp  opencl_helper.h  opencl_helper.hpp  opencl_test.cpp  plot_results.py  run_experiments.py
cmake/Modules/: FindMKL.cmake
