cmake_minimum_required(VERSION 3.10)

project(hardware_instructions_demo VERSION 1.0 LANGUAGES CXX CUDA)

find_package(OpenMP REQUIRED)

set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

# Buffer type list
set(buf_kinds "0" "1")
set(buf_types "float" "double")

# Set of base compile options
#set(base_compile_options1 "-std=c++11" "-Wall" "-Werror" "-Wextra" "-fverbose-asm" "-fopt-info")
set(base_compile_options1 "-std=c++11" "-Wall" "-Werror" "-Wextra" "-fverbose-asm")
set(omp_compile_options "-fopenmp")
set(mkl_compile_options "-I/opt/intel/mkl/include")
set(omp_link_options "-lgomp -lpthread")
set(acc_link_options "-lpthread")
set(mkl_link_options "-L/opt/intel/mkl/lib/intel64/ -lmkl_rt")
set(openblas_link_options "-lopenblas")

# program group 1
set(compile_versions1 O3_i386 O3_i686 O3_nehalem O3_broadwell O3_skylake O3_knl)
set(compile_options1 "-O3 -march=i386 -m32" "-O3 -march=i686 -m32" "-O3 -march=nehalem" "-O3 -march=broadwell" "-O3 -march=skylake" "-O3 -march=knl")
set(link_options1 "-m32" "-m32" "_" "_" "_" "_")

# Compute lengths of arrays
list(LENGTH compile_versions1 versions1_length)
math(EXPR versions1_len "${versions1_length} - 1")
list(LENGTH compile_versions2 versions2_length)
math(EXPR versions2_len "${versions2_length} - 1")
list(LENGTH buf_kinds buf_kinds_length)
math(EXPR buf_kinds_len "${buf_kinds_length} - 1")

foreach(buf_idx RANGE ${buf_kinds_len})
list(GET buf_kinds ${buf_idx} buf_kind)
list(GET buf_types ${buf_idx} buf_type)

add_executable(laplace_cuda_${buf_type} laplace_cuda.cu)
target_compile_options(laplace_cuda_${buf_type} PRIVATE ${base_compile_option1})
target_compile_options(laplace_cuda_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
set_property(TARGET laplace_cuda_${buf_type} PROPERTY CUDA_ARCHITECTURES 61)

foreach(idx RANGE ${versions1_len})
list(GET compile_versions1 ${idx} compile_version)
list(GET compile_options1 ${idx} compile_options)
list(GET link_options1 ${idx} link_options)
separate_arguments(compile_options)

add_executable(loop1_${compile_version}_${buf_type} loop1.cpp)
add_executable(loop2_${compile_version}_${buf_type} loop2.cpp)
add_executable(loop1_opencl_${compile_version}_${buf_type} loop1_opencl.cpp)
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
add_executable(loop1_mkl_${compile_version}_${buf_type} loop1_mkl.cpp)
add_executable(loop1_mkl2_${compile_version}_${buf_type} loop1_mkl2.cpp)
add_executable(loop1_openblas_${compile_version}_${buf_type} loop1_openblas.cpp)
endif()
add_executable(laplace_${compile_version}_${buf_type} laplace.cpp)
add_executable(laplace_opencl_${compile_version}_${buf_type} laplace_opencl.cpp)
add_executable(laplace_openacc_${compile_version}_${buf_type} laplace_openacc.cpp)

target_compile_options(loop1_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
target_compile_options(loop2_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
target_compile_options(loop1_opencl_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
target_compile_options(loop1_mkl_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
target_compile_options(loop1_mkl2_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
target_compile_options(loop1_openblas_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
endif()
target_compile_options(laplace_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
target_compile_options(laplace_opencl_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")
target_compile_options(laplace_openacc_${compile_version}_${buf_type} PRIVATE "-DBUF_KIND=${buf_kind}")

target_compile_options(laplace_openacc_${compile_version}_${buf_type} PRIVATE "-fopenacc")

target_compile_options(loop1_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
target_compile_options(loop2_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
target_compile_options(loop1_opencl_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
target_compile_options(loop1_mkl_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
target_compile_options(loop1_mkl2_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
target_compile_options(loop1_openblas_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
endif()
target_compile_options(laplace_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
target_compile_options(laplace_opencl_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})
target_compile_options(laplace_openacc_${compile_version}_${buf_type} PRIVATE ${base_compile_options1})

target_compile_options(laplace_${compile_version}_${buf_type} PRIVATE ${omp_compile_options})
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
target_compile_options(loop1_mkl_${compile_version}_${buf_type} PRIVATE ${mkl_compile_options})
target_compile_options(loop1_mkl2_${compile_version}_${buf_type} PRIVATE ${mkl_compile_options})
target_compile_options(loop1_openblas_${compile_version}_${buf_type} PRIVATE ${mkl_compile_options})
endif()

target_compile_options(loop1_${compile_version}_${buf_type} PRIVATE ${compile_options})
target_compile_options(loop2_${compile_version}_${buf_type} PRIVATE ${compile_options})
target_compile_options(loop1_opencl_${compile_version}_${buf_type} PRIVATE ${compile_options})
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
target_compile_options(loop1_mkl_${compile_version}_${buf_type} PRIVATE ${compile_options})
target_compile_options(loop1_mkl2_${compile_version}_${buf_type} PRIVATE ${compile_options})
target_compile_options(loop1_openblas_${compile_version}_${buf_type} PRIVATE ${compile_options})
endif()
target_compile_options(laplace_${compile_version}_${buf_type} PRIVATE ${compile_options})
target_compile_options(laplace_opencl_${compile_version}_${buf_type} PRIVATE ${compile_options})
target_compile_options(laplace_openacc_${compile_version}_${buf_type} PRIVATE ${compile_options})
if(NOT ${link_options} STREQUAL "_")
set_target_properties(loop1_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS ${link_options})
set_target_properties(loop2_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS ${link_options})
set_target_properties(loop1_opencl_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} -lOpenCL")
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
set_target_properties(loop1_mkl_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} ${mkl_link_options}")
set_target_properties(loop1_mkl2_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} ${mkl_link_options}")
set_target_properties(loop1_openblas_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} ${openblas_link_options}")
endif()
set_target_properties(laplace_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} ${omp_link_options}")
set_target_properties(laplace_opencl_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} -lOpenCL")
set_target_properties(laplace_openacc_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${link_options} ${omp_link_options}")
else()
set_target_properties(loop1_opencl_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "-lOpenCL")
if(NOT "${link_options}" MATCHES "^.*-m32.*$")
set_target_properties(loop1_mkl_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${mkl_link_options}")
set_target_properties(loop1_mkl2_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${mkl_link_options}")
set_target_properties(loop1_openblas_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${openblas_link_options}")
endif()
set_target_properties(laplace_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${omp_link_options}")
set_target_properties(laplace_opencl_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "-lOpenCL")
set_target_properties(laplace_openacc_${compile_version}_${buf_type} PROPERTIES LINK_FLAGS "${omp_link_options}")
endif()
endforeach()
endforeach()

add_executable(loop1_cuda loop1_cuda.cu)
set_property(TARGET loop1_cuda PROPERTY CUDA_ARCHITECTURES 61)
